--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@svgr/rollup": "^8.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ui-kit-cars": "^0.0.0"
+    "react-router-dom": "^6.28.0",
+    "ui-kit-cars": "^0.0.2",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
