--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@svgr/rollup": "^8.1.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "ui-kit-cars": "^0.0.3",
-    "vite-plugin-svgr": "^4.3.0"
+    "ui-kit-cars": "^0.0.8",
+    "vite-plugin-svgr": "^4.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
