--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.28.0",
-    "ui-kit-cars": "^0.0.9",
+    "ui-kit-cars": "^0.0.11",
     "vite-plugin-svgr": "^4.3.0",
     "yup": "^1.4.0"
   },
