--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@svgr/rollup": "^8.1.0",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "mobx": "^6.13.5",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
